NetBSD Problem Report #54490
From www@netbsd.org Mon Aug 26 22:13:32 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 1E0317A180
for <gnats-bugs@gnats.NetBSD.org>; Mon, 26 Aug 2019 22:13:32 +0000 (UTC)
Message-Id: <20190826221331.3FF927A1B6@mollari.NetBSD.org>
Date: Mon, 26 Aug 2019 22:13:31 +0000 (UTC)
From: mujo@sdf.org
Reply-To: mujo@sdf.org
To: gnats-bugs@NetBSD.org
Subject: abort trap in sysinst for aarch64 netbsd-current 2019-08-23
X-Send-Pr-Version: www-1.0
>Number: 54490
>Category: port-arm
>Synopsis: abort trap in sysinst for aarch64 netbsd-current 2019-08-23
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: martin
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Aug 26 22:15:00 +0000 2019
>Closed-Date: Sat May 25 06:27:11 +0000 2024
>Last-Modified: Sat May 25 06:27:11 +0000 2024
>Originator: Ian
>Release: NetBSD-current 2019-08-23
>Organization:
>Environment:
NetBSD 9.0_BETA NetBSD 9.0_BETA (GENERIC64) #0: Fri Aug 23 04:24:00 UTC 2019 mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/evbarm/compile/GENERIC64 evbarm
>Description:
assertion "info->nat_type != NULL" failed: file "/usr/src/usr.sbin/sysinst/arch/evbarm/../../mbr.c", line 1938, function "mbr_add_part" [1] Abort trap sysinst
>How-To-Repeat:
Boot netbsd generic aarch64 image from invisible.ca on allwinner a53-cortex (Olimex Teres laptop), run `sysinst`, select "Other System", "Install to Hard disk", select embedded mmc (ld0), and "Use default partition sizes" then sysinst reliably crashes with the above error message.
>Fix:
Just a guess, but aarch64 systems do not use an mbr.
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: port-arm-maintainer->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Tue, 27 Aug 2019 04:55:36 +0000
Responsible-Changed-Why:
My bug
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54490 CVS commit: src/usr.sbin/sysinst
Date: Tue, 27 Aug 2019 17:23:24 +0000
Module Name: src
Committed By: martin
Date: Tue Aug 27 17:23:24 UTC 2019
Modified Files:
src/usr.sbin/sysinst: mbr.c
Log Message:
When requesting no special FS sub type, default to FAT32 with LBA.
Fixes one part of PR 54490.
To generate a diff of this commit:
cvs rdiff -u -r1.20 -r1.21 src/usr.sbin/sysinst/mbr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54490 CVS commit: [netbsd-9] src/usr.sbin/sysinst
Date: Wed, 28 Aug 2019 10:01:57 +0000
Module Name: src
Committed By: msaitoh
Date: Wed Aug 28 10:01:57 UTC 2019
Modified Files:
src/usr.sbin/sysinst [netbsd-9]: mbr.c
Log Message:
Pull up following revision(s) (requested by martin in ticket #125):
usr.sbin/sysinst/mbr.c: revision 1.21
When requesting no special FS sub type, default to FAT32 with LBA.
Fixes one part of PR 54490.
To generate a diff of this commit:
cvs rdiff -u -r1.19.2.1 -r1.19.2.2 src/usr.sbin/sysinst/mbr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: coypu@sdf.org
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: port-arm/54490: abort trap in sysinst for aarch64 netbsd-current
2019-08-23
Date: Tue, 21 Apr 2020 20:20:00 +0000
Hi martin,
since I've heard that aarch64 sysinst isn't too satisfactory, I'm
hesitating to close this bug. Do you think there's any information this
bug adds to the situation, after your commit?
State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 30 Aug 2022 11:47:21 +0000
State-Changed-Why:
OK to close?
From: ioh <mujo@SDF.ORG>
To: gnats-bugs@www46.netbsd.org
Cc:
Subject: Re: port-arm/54490
Date: Fri, 24 May 2024 04:26:36 +0000
I think this report is okay to close. There's no further information to add and if this is still an issue, it'll come up again.
Unfortunetly, I don't have a ready aarch64 system to test the fix myself.
Could we please close this bug so I no longer get emails about it?
Thanks,
--
Ian
State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sat, 25 May 2024 06:27:11 +0000
State-Changed-Why:
Close per submitters request.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.