When requesting no special FS sub type, default to FAT32 with LBA. Fixes one part of PR 54490.